backend/db_tables.txt
  File "<string>", line 9
    print(f'{t} exists: {[c.get(\
                               ^
SyntaxError: '(' was never closed
